--- a/publication/example/index.html
+++ b/publication/example/index.html
@@ -771,9 +771,7 @@
 
 
   
-  <a class="btn btn-outline-primary btn-page-header" href="/project/example/">
-    Project
-  </a>
+    
   
 
 
@@ -985,7 +983,7 @@
     <div class="media-body">
       <h5 class="card-title"><a href="https://SirKoto.github.io/">Pol Martín Garcia</a></h5>
       <h6 class="card-subtitle">R&amp;D 3D-Printing</h6>
-      <p class="card-text">Computer graphics enthusiast, specialy on simulation and real-time rendering.</p>
+      <p class="card-text">Computer graphics enthusiast, focused on simulation and real-time rendering.</p>
       <ul class="network-icon" aria-hidden="true">
   
     
