--- a/publication/mpm-thesis/index.html
+++ b/publication/mpm-thesis/index.html
@@ -1014,7 +1014,7 @@ Because this is such a complex topic, even more for the computer science student
     <h3>Related</h3>
     <ul>
       
-      <li><a href="/project/mpm-simulator/">MPM Simulator (Bachelor thesis)</a></li>
+      <li><a href="/project/mpm-simulator/">MPM Simulator (Bachelor&#39;s thesis)</a></li>
       
     </ul>
   </div>
@@ -1044,7 +1044,7 @@ Because this is such a complex topic, even more for the computer science student
 
   
   <p class="powered-by">
-    © 2022 Pol Martín
+    © 2022 Pol Martín<br>I did this with <a href="https://gohugo.io/">Hugo</a> and <a href="https://github.com/wowchemy/starter-hugo-academic">Academic</a>
   </p>
   
 
