--- a/talk/mpm-simulation-from-the-point-of-view-of-a-student-short-paper/index.html
+++ b/talk/mpm-simulation-from-the-point-of-view-of-a-student-short-paper/index.html
@@ -841,7 +841,7 @@
           <div class="col-12 col-md-3 pub-row-heading">Event</div>
           <div class="col-12 col-md-9">
             <a href="https://www.virvig.eu/ceig2021/index.php/programa/" target="_blank" rel="noopener">
-            Spanish congress of Computer Graphics
+            Spanish congress of Computer Graphics 2021
             </a>
           </div>
         </div>
@@ -1009,7 +1009,7 @@
 
   
   <p class="powered-by">
-    © 2022 Pol Martín
+    © 2022 Pol Martín<br>I did this with <a href="https://gohugo.io/">Hugo</a> and <a href="https://github.com/wowchemy/starter-hugo-academic">Academic</a>
   </p>
   
 
