Update Pre Vulcanus

--- a/event/index.html
+++ b/event/index.html
@@ -60,7 +60,7 @@
   
     
   
-  <meta name="description" content="R&amp;D 3D-Printing" />
+  <meta name="description" content="Exchange Student living in Japan" />
 
   
   <link rel="alternate" hreflang="en-us" href="https://SirKoto.github.io/event/" />
@@ -306,7 +306,7 @@
   <meta property="og:site_name" content="Pol&#39;s portfolio" />
   <meta property="og:url" content="https://SirKoto.github.io/event/" />
   <meta property="og:title" content="Recent &amp; Upcoming Talks | Pol&#39;s portfolio" />
-  <meta property="og:description" content="R&amp;D 3D-Printing" /><meta property="og:image" content="https://SirKoto.github.io/media/icon_hu36b41f71f33cc8e1aec8948b0e13c529_2050_512x512_fill_lanczos_center_3.png" />
+  <meta property="og:description" content="Exchange Student living in Japan" /><meta property="og:image" content="https://SirKoto.github.io/media/icon_hu36b41f71f33cc8e1aec8948b0e13c529_2050_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="https://SirKoto.github.io/media/icon_hu36b41f71f33cc8e1aec8948b0e13c529_2050_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
