--- a/publication/sfd/index.html
+++ b/publication/sfd/index.html
@@ -957,7 +957,7 @@
 
     <div class="media-body">
       <h5 class="card-title"><a href="https://SirKoto.github.io/">Pol Martín Garcia</a></h5>
-      <h6 class="card-subtitle">R&amp;D 3D-Printing</h6>
+      <h6 class="card-subtitle">Exchange Student living in Japan</h6>
       <p class="card-text">Computer graphics enthusiast, focused on simulation and real-time rendering.</p>
       <ul class="network-icon" aria-hidden="true">
   
